fixed spacing with space-between

--- a/styles.css
+++ b/styles.css
@@ -29,13 +29,8 @@ form section {
 }
 
 /* Car info section */
-#car-info select {
-    width: 280px;
-    padding: 12px 10px;
-}
-
-#car-info input {
-    width: 200px;
+#car-info select,input {
+    width: 240px;
     padding: 12px 10px;
 }
 
@@ -72,7 +67,7 @@ textarea {
 .question-box{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 button {
